--- a/assets/scss/_product.scss
+++ b/assets/scss/_product.scss
@@ -18,12 +18,20 @@
             display: flex;
             width: 100%;
             flex-wrap: wrap;
+            &:before, &:after {
+                content: none;
+                display: block;
+            }
             li.product {
                 margin: 0 0 10px;
                 width: auto;
                 float: none;
                 padding-left: 5px;
                 padding-right: 5px;
+                clear: none;
+                &.first {
+                    clear: none;
+                }
             }
 
             &.columns-2 {
